--- a/src/styles.css
+++ b/src/styles.css
@@ -20,7 +20,6 @@ h3 {
   color: white;
   text-align: center;
   max-width: 1500px;
-  margin: 0 auto;
 }
 .learn-more-button a {
   background-color: white;
@@ -54,4 +53,29 @@ h3 {
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 20px;
   width: 100%;
+}
+@media (max-width: 600px) {
+  h1 {
+    font-size: 30px;
+  }
+  h2 {
+    font-size: 20px;
+  }
+  .image {
+    width: 300px;
+  }
+  .second-hero {
+    display: block;
+  }
+  .paragraph {
+    width: 300px;
+    margin: 20px;
+  }
+  .card-group,
+  .instagram-media {
+    display: block;
+    margin: 0 auto;
+    padding: 40px;
+    width: 300px;
+  }
 }
