Made embeds look better on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -38,13 +38,11 @@ h3 {
 .second-hero {
   display: grid;
   grid-template-columns: 1fr 1fr;
-
   grid-gap: 50px;
 }
 .card-group {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-
   grid-gap: 20px;
   width: 100%;
 }
@@ -61,9 +59,7 @@ h3 {
   h2 {
     font-size: 20px;
   }
-  .hero {
-    padding: 30px 20px;
-  }
+
   .image {
     display: block;
     margin: 0 auto;
@@ -74,19 +70,15 @@ h3 {
     display: block;
   }
   .paragraph {
-    width: 300px;
-    margin: 20px;
+    margin: 20px 0;
   }
   .card-group {
     display: block;
     margin: 0;
     padding: 40px;
-    width: 300px;
   }
   .instagram-media {
     display: block;
     margin: 0;
-
-    width: 300px;
   }
 }
