--- a/src/styles.css
+++ b/src/styles.css
@@ -19,7 +19,6 @@ h3 {
   padding: 200px 0;
   color: white;
   text-align: center;
-  max-width: 1500px;
 }
 .learn-more-button a {
   background-color: white;
@@ -72,13 +71,10 @@ h3 {
   .paragraph {
     margin: 20px 0;
   }
-  .card-group {
-    display: block;
-    margin: 0;
-    padding: 40px;
-  }
+  .card-group,
   .instagram-media {
     display: block;
     margin: 0;
+    padding: 40px;
   }
 }
