--- a/src/styles.css
+++ b/src/styles.css
@@ -11,7 +11,12 @@ h2 {
 h3 {
   font-size: 20px;
 }
-
+h4 {
+  font-size: 24px;
+}
+h5 {
+  font-size: 13px;
+}
 header {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url("../images/nigeria-image.jpeg");
@@ -62,7 +67,22 @@ header a {
   background-color: #edebeb;
   padding: 100px;
 }
-
+.card-body {
+  padding: 30px;
+}
+.card-body p {
+  color: #797685;
+}
+.button {
+  background-color: rgb(82, 21, 82);
+  color: white;
+  display: block;
+  margin: 0 auto;
+  padding: 16px 40px;
+  text-decoration: none;
+  text-align: center;
+  margin-top: 50px;
+}
 footer {
   background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
     url("../images/image-footer.jpeg");
